# RustyHack

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
rom/: DrunkenSniper.hex
src/: lib.rs  main.rs
wasm/: Cargo.toml  README.md  build.bat
wasm/src/: lib.rs
