[package]
name = "RustyHack"
version = "1.0.0"
authors = ["Adollo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.4"
winit = "0.22.2"
winit_input_helper = "=0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'