[package]
name = "wasm_hack"
version = "0.1.0"
authors = ["nouvadam <adam.nowakow3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen =  "0.2.70"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
RustyHack = {path = "../"}

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[lib]
crate-type =["cdylib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1